plugins {
	id 'org.springframework.boot' version '3.5.7'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'java'
}

group = 'com.ersa'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = JavaVersion.VERSION_21
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'com.h2database:h2'
	implementation 'mysql:mysql-connector-java:8.0.33'
	implementation 'org.jetbrains:annotations:26.0.2'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'software.amazon.awssdk:s3:2.36.2'
	implementation 'com.github.ben-manes.caffeine:caffeine:3.2.2'
	implementation group: 'io.micrometer', name: 'micrometer-registry-prometheus', version: '1.13.3'
	compileOnly 'org.projectlombok:lombok:1.18.42'
	annotationProcessor 'org.projectlombok:lombok:1.18.42'

	compileOnly 'commons-beanutils:commons-beanutils:1.11.0'

	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
	testImplementation 'org.springframework.security:spring-security-test'
}

configurations {
	compile.exclude module: 'spring-boot-starter-logging'
}

test {
	useJUnitPlatform()
}
